@@ -18,6 +18,10 @@ along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
 the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA.
 
+2004-11-08  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/powerpc64/com_n.asm: New file.
+
 2004-11-05  Torbjorn Granlund  <tege@swox.com>
 
 	* mpn/amd64/diveby3.asm: New file.
